# konserwatorium

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: data_reader.h  shared.h  solver.h
src/: data_reader.cpp  shared.cpp  solver.cpp
utils/: data_generator.py
